--- a/index.html
+++ b/index.html
@@ -21,61 +21,61 @@
     <h4 class="nuevos">Clientes Nuevos</h4>
     <hr class="nuevos">
     
-    <input id="pplatahd" type="radio" name="plan" value="27580"><label for="pplatahd">Plan Plata HD</label> <br>
-    <input id="porohd" type="radio" name="plan" value="32450"><label for="porohd">Plan Oro HD</label> <br>
-    <input id="poroplus" type="radio" name="plan" value="37000"><label for="poroplus">Plan Oro Plus HD</label> <br>
-    <input id="oro4k" type="radio" name="plan" value="41230"><label for="oro4k">Plan Oro 4K</label> <br>
+    <input id="pplatahd" type="radio" name="plan" value="28940"><label for="pplatahd">Plan Plata HD</label> <br>
+    <input id="porohd" type="radio" name="plan" value="34050"><label for="porohd">Plan Oro HD</label> <br>
+    <input id="poroplus" type="radio" name="plan" value="38820"><label for="poroplus">Plan Oro Plus HD</label> <br>
+    <input id="oro4k" type="radio" name="plan" value="43260"><label for="oro4k">Plan Oro 4K</label> <br>
     <input id="broncelite" type="radio" name="plan" value="20610"><label for="broncelite">Plan Bronce Lite</label>
     </div>  
     <div class="c2">
     <h4 class="cartera">Clientes Cartera</h4>
     <hr class="cartera">
-    <input id="bronce" type="radio" name="plan" value="24940"><label for="bronce">Pack Bronce</label> <br>
-    <input id="broncehd" type="radio" name="plan" value="27590"><label for="broncehd">Pack Bronce HD</label> <br>
-    <input id="plata" type="radio" name="plan" value="32860"><label for="plata">Pack Plata</label> <br>
-    <input id="platahd" type="radio" name="plan" value="35510"><label for="platahd">Pack Plata HD</label> <br> 
-    <input id="orosd" type="radio" name="plan" value="37730"><label for="orosd">Pack Oro</label> <br>
-    <input id="orohd" type="radio" name="plan" value="40380"><label for="orohd">Pack Oro HD</label> <br>
-    <input id="oroplus" type="radio" name="plan" value="41210"><label for="oroplus">Pack Oro Plus</label> <br>
-    <input id="oroplushd" type="radio" name="plan" value="44400"><label for="oroplushd">Plack Oro Plus Hd</label>
+    <input id="bronce" type="radio" name="plan" value="26170"><label for="bronce">Pack Bronce</label> <br>
+    <input id="broncehd" type="radio" name="plan" value="28590"><label for="broncehd">Pack Bronce HD</label> <br>
+    <input id="plata" type="radio" name="plan" value="34470"><label for="plata">Pack Plata</label> <br>
+    <input id="platahd" type="radio" name="plan" value="37240"><label for="platahd">Pack Plata HD</label> <br> 
+    <input id="orosd" type="radio" name="plan" value="39580"><label for="orosd">Pack Oro</label> <br>
+    <input id="orohd" type="radio" name="plan" value="42350"><label for="orohd">Pack Oro HD</label> <br>
+    <input id="oroplus" type="radio" name="plan" value="43220"><label for="oroplus">Pack Oro Plus</label> <br>
+    <input id="oroplushd" type="radio" name="plan" value="46570"><label for="oroplushd">Plack Oro Plus Hd</label>
     </div>  
    
     <div class="c3">
       <h4 class="decos">Total de decos</h4>
       <hr class="decos">
-      <input id="3" type="radio" name="equipos" value="3910"><label for="3">3 decos</label><br>
-      <input id="4" type="radio" name="equipos" value="7820"><label for="4">4 decos</label><br>
-      <input id="5" type="radio" name="equipos" value="11730"><label for="5">5 decos</label><br>
-      <input id="6" type="radio" name="equipos" value="15640"><label for="6">6 decos</label><br>
-      <input id="7" type="radio" name="equipos" value="19550"><label for="7">7 decos</label><br>
-      <input id="8" type="radio" name="equipos" value="23460"><label for="8">8 decos</label>
+      <input id="3" type="radio" name="equipos" value="4100"><label for="3">3 decos</label><br>
+      <input id="4" type="radio" name="equipos" value="8200"><label for="4">4 decos</label><br>
+      <input id="5" type="radio" name="equipos" value="12300"><label for="5">5 decos</label><br>
+      <input id="6" type="radio" name="equipos" value="16400"><label for="6">6 decos</label><br>
+      <input id="7" type="radio" name="equipos" value="20500"><label for="7">7 decos</label><br>
+      <input id="8" type="radio" name="equipos" value="24600"><label for="8">8 decos</label>
       </div>
       <div class="c4">
         <h4 class="premium">Paquetes Premium</h4>
         <hr class="premium">
-        <input id="tnt" type="checkbox" name="premium1" value="8730"><label class="rvpValor" for="tnt">Tnt $8.730---------></label>
-        <input class="cheEspacio" id="rvp1" type="checkbox" name="rvp1" value="-4365"><label class="rvpEspacio" for="rvp1">50%</label><br>
-        <input id="tntv" type="checkbox" name="premium2" value="7920"><label for="tntv">Tnt $7.920---------></label>
-        <input class="cheEspacio" id="rvp2" type="checkbox" name="rvp2" value="-3960"><label class="rvpEspacio" for="rvp2">50%</label> <br>   
-        <input id="tnthd" type="checkbox" name="premium3" value="11300"><label for="tnthd">Tnt HD $11.300--></label>
-        <input class="cheEspacio" id="rvp3" type="checkbox" name="rvp3" value="-5650"><label class="rvpEspacio" for="rvp3">50%</label> <br>
-        <input id="hbo" type="checkbox" name="premium4" value="7920"><label for="hbo">Hbo-----------------></label>
-        <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-3960"><label class="rvpEspacio" for="rvp4">50%</label> <br>
-        <input id="universal" type="checkbox" name="premium6" value="7920"><label for="universal">Universal----------></label> 
-        <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-3960"><label class="rvpEspacio" for="rvp5">50%</label> <br>
+        <input id="tnt" type="checkbox" name="premium1" value="9150"><label class="rvpValor" for="tnt">Tnt $9.150---------></label>
+        <input class="cheEspacio" id="rvp1" type="checkbox" name="rvp1" value="-4575"><label class="rvpEspacio" for="rvp1">50%</label><br>
+        <input id="tntv" type="checkbox" name="premium2" value="8300"><label for="tntv">Tnt $8.300---------></label>
+        <input class="cheEspacio" id="rvp2" type="checkbox" name="rvp2" value="-4150"><label class="rvpEspacio" for="rvp2">50%</label> <br>   
+        <input id="tnthd" type="checkbox" name="premium3" value="11850"><label for="tnthd">Tnt HD $11.850--></label>
+        <input class="cheEspacio" id="rvp3" type="checkbox" name="rvp3" value="-5925"><label class="rvpEspacio" for="rvp3">50%</label> <br>
+        <input id="hbo" type="checkbox" name="premium4" value="8300"><label for="hbo">Hbo-----------------></label>
+        <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-4150"><label class="rvpEspacio" for="rvp4">50%</label> <br>
+        <input id="universal" type="checkbox" name="premium6" value="8300"><label for="universal">Universal----------></label> 
+        <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-4150"><label class="rvpEspacio" for="rvp5">50%</label> <br>
         <!-- <input id="combo1" type="checkbox" name="premium7" value="7920"><label for="combo1">Combo $7.960</label> <br> -->
         <input id="combo2" type="checkbox" name="premium8" value="10500"><label for="combo2">Combo $10.500</label> <br>
         <input id="star+" type="checkbox" name="premium9" value="8500"><label for="star+">Star+ $8.500</label> <br>
         <input id="disney" type="checkbox" name="premium10" value="6500"><label for="disney">Disney $6.500</label> <br>
-        <input id="foxsport" type="checkbox" name="premium11" value="9970"><label for="foxsport">Fox Sport----------></label>
-        <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-4985"><label class="rvpEspacio" for="rvp6">50%</label> <br>
+        <input id="foxsport" type="checkbox" name="premium11" value="10450"><label for="foxsport">Fox Sport----------></label>
+        <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-5225"><label class="rvpEspacio" for="rvp6">50%</label> <br>
         <!-- <input id="todostar" type="checkbox" name="premium12" value="13360"><label for="todostar">Todo Star</label><br> -->
-        <input id="hotpack" type="checkbox" name="premium13" value="8630"><label for="hotpack">Hot Pack-----------></label>
-        <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4315"><label class="rvpEspacio" for="rvp7">50%</label> <br>
-        <input id="exxotico" type="checkbox" name="premium14" value="8630"><label for="exxotico">Exxotico-----------></label>
-        <input class="cheEspacio" id="rvp8" type="checkbox" name="rvp8" value="-4315"><label class="rvpEspacio" for="rvp8">50%</label> <br>
-        <input id="full" type="checkbox" name="premium15" value="1540"><label for="full">Full Service-------></label>
-        <input class="cheEspacio" id="rvp9" type="checkbox" name="rvp9" value="-770"><label class="rvpEspacio" for="rvp9">50%</label> <br>
+        <input id="hotpack" type="checkbox" name="premium13" value="9050"><label for="hotpack">Hot Pack-----------></label>
+        <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4525"><label class="rvpEspacio" for="rvp7">50%</label> <br>
+        <input id="exxotico" type="checkbox" name="premium14" value="9050"><label for="exxotico">Exxotico-----------></label>
+        <input class="cheEspacio" id="rvp8" type="checkbox" name="rvp8" value="-4525"><label class="rvpEspacio" for="rvp8">50%</label> <br>
+        <input id="full" type="checkbox" name="premium15" value="1610"><label for="full">Full Service-------></label>
+        <input class="cheEspacio" id="rvp9" type="checkbox" name="rvp9" value="-805"><label class="rvpEspacio" for="rvp9">50%</label> <br>
         </div> 
     <div class="c5">
     <h4 class="rvo">Promociones Rvo</h4>
@@ -92,13 +92,14 @@
     <input id="rvo10" type="radio" name="rvo" value="-12000"><label for="rvo10">$12.000</label><br>
     <input id="rvo11" type="radio" name="rvo" value="-14000"><label for="rvo11">$14.000</label><br>
     <input id="rvo12" type="radio" name="rvo" value="-16000"><label for="rvo12">$16.000</label><br>
-    <input id="rvo13" type="checkbox" name="rvoEquipo" value="-1955"><label for="rvo13">50% deco Adicional</label>
+    <input id="rvo13" type="checkbox" name="rvoEquipo" value="-2050"><label for="rvo13">50% deco Adicional</label><br>
+    <!-- <input id="rvo14" type="text" name="rvoExtra" value="" class="Extra"><label for="rvo14">Extra</label> -->
     </div>
     <div class="c6">
       <h4 class="extras">Extras</h4>
       <hr class="extras">
       <input id="recargo" type="checkbox" name="recargo" value="1600"><label class="rvpValor" for="recargo">Recargo x mora $1.600</label><br>
-      <input id="tntflex" type="checkbox" name="tntflex" value="3380"><label class="rvpValor" for="tntflex">Tnt flexible $3.380</label><br>
+      <input id="tntflex" type="checkbox" name="tntflex" value="3550"><label class="rvpValor" for="tntflex">Tnt flexible $3.550</label><br>
       <input id="deco" type="checkbox" name="deco" value="29990"><label class="rvpValor" for="deco">Deco Adicional $29.990</label><br>
       <input id="cambio" type="checkbox" name="cambio" value="15990"><label class="rvpValor" for="cambio">Cambio lugar deco/antena $15.990</label><br>
       <input id="recableado" type="checkbox" name="recableado" value="13990"><label class="rvpValor" for="recableado">Recableado $13.990</label>
