--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <input id="rvo11" type="radio" name="rvo" value="-14000"><label for="rvo11">$14.000</label><br>
     <input id="rvo12" type="radio" name="rvo" value="-16000"><label for="rvo12">$16.000</label><br>
     <input id="rvo13" type="checkbox" name="rvoEquipo" value="-2050"><label for="rvo13">50% deco Adicional</label><br>
-    <!-- <input id="rvo14" type="text" name="rvoExtra" value="" class="Extra"><label for="rvo14">Extra</label> -->
+    <input id="rvo14" type="text" name="rvoExtra" value="" class="Extra"><label for="rvo14">Extra</label>
     </div>
     <div class="c6">
       <h4 class="extras">Extras</h4>
@@ -104,7 +104,8 @@
       <input id="tntflex" type="checkbox" name="tntflex" value="3550"><label class="rvpValor" for="tntflex">Tnt flexible $3.550</label><br>
       <input id="deco" type="checkbox" name="deco" value="29990"><label class="rvpValor" for="deco">Deco Adicional $29.990</label><br>
       <input id="cambio" type="checkbox" name="cambio" value="15990"><label class="rvpValor" for="cambio">Cambio lugar deco/antena $15.990</label><br>
-      <input id="recableado" type="checkbox" name="recableado" value="13990"><label class="rvpValor" for="recableado">Recableado $13.990</label>
+      <input id="recableado" type="checkbox" name="recableado" value="13990"><label class="rvpValor" for="recableado">Recableado $13.990</label><br>
+      <input id="extra" type="text" name="Extra" value="" class="Extra"><label for="Extra">Extra</label>
       <br>
       <br>
       <div class="flotante" id="resultado"></div>
