--- a/index.html
+++ b/index.html
@@ -65,13 +65,11 @@
         <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-4150"><label class="rvpEspacio" for="rvp4">50%</label> <br>
         <input id="universal" type="checkbox" name="premium6" value="8300"><label for="universal">Universal----------></label> 
         <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-4150"><label class="rvpEspacio" for="rvp5">50%</label> <br>
-        <!-- <input id="combo1" type="checkbox" name="premium7" value="7920"><label for="combo1">Combo $7.960</label> <br> -->
         <input id="combo2" type="checkbox" name="premium8" value="10500"><label for="combo2">Combo $10.500</label> <br>
         <input id="star+" type="checkbox" name="premium9" value="8500"><label for="star+">Star+ $8.500</label> <br>
         <input id="disney" type="checkbox" name="premium10" value="6500"><label for="disney">Disney $6.500</label> <br>
         <input id="foxsport" type="checkbox" name="premium11" value="10450"><label for="foxsport">Fox Sport----------></label>
         <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-5225"><label class="rvpEspacio" for="rvp6">50%</label> <br>
-        <!-- <input id="todostar" type="checkbox" name="premium12" value="13360"><label for="todostar">Todo Star</label><br> -->
         <input id="hotpack" type="checkbox" name="premium13" value="9050"><label for="hotpack">Hot Pack-----------></label>
         <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4525"><label class="rvpEspacio" for="rvp7">50%</label> <br>
         <input id="exxotico" type="checkbox" name="premium14" value="9050"><label for="exxotico">Exxotico-----------></label>
@@ -95,7 +93,7 @@
     <input id="rvo11" type="radio" name="rvo" value="-14000"><label for="rvo11">$14.000</label><br>
     <input id="rvo12" type="radio" name="rvo" value="-16000"><label for="rvo12">$16.000</label><br>
     <input id="rvo13" type="checkbox" name="rvoEquipo" value="-2050"><label for="rvo13">50% deco Adicional</label><br>
-    <input id="rvo14" type="text" name="rvoExtra" value="" class="Extra"><label for="rvo14">Extra</label>
+    <input id="rvo14" type="text" name="rvoExtra" value="" class="Extra"><label for="rvo14">Ingresa un descuento</label>
     </div>
     <div class="c6">
       <h4 class="extras">Extras</h4>
@@ -105,7 +103,7 @@
       <input id="deco" type="checkbox" name="deco" value="29990"><label class="rvpValor" for="deco">Deco Adicional $29.990</label><br>
       <input id="cambio" type="checkbox" name="cambio" value="15990"><label class="rvpValor" for="cambio">Cambio lugar deco/antena $15.990</label><br>
       <input id="recableado" type="checkbox" name="recableado" value="13990"><label class="rvpValor" for="recableado">Recableado $13.990</label><br>
-      <input id="extra" type="text" name="Extra" value="" class="Extra"><label for="Extra">Extra</label>
+      <input id="extra" type="text" name="Extra" value="" class="Extra"><label for="Extra">Ingresa un cargo adicional</label>
       <br>
       <br>
       <div class="flotante" id="resultado"></div>
