plantilla contactos programacion y factura

--- a/index.html
+++ b/index.html
@@ -127,22 +127,27 @@
         <label for="" class="tituloCopy">Rvo</label><br>
         <input id="rvo0" type="checkbox" name="rvo0" value="Quiero la baja del servicio por costos, se deriva rvo "><label class="rvo" for="rvo0">Quiero la baja del servicio por costos, se deriva a rvo</label><br>
         <input id="rvo01" type="checkbox" name="rvo01" value="Quiero la baja del servicio, se deriva rvo "><label class="rvo" for="rvo01">Quiero la baja del servicio, se deriva a rvo</label><br>
-        <input id="rvo02" type="checkbox" name="rvo02" value="Quiero la baja del servicio, llamar en horario, autogestion por midirectv "><label class="rvo" for="rvo02">Quiero la baja del servicio, llamar en horario, autogestion por midirectv</label><br>
+        <input id="rvo02" type="checkbox" name="rvo02" value="Quiero la baja del servicio, llamar en horario, se informa autogestion por midirectv "><label class="rvo" for="rvo02">Quiero la baja del servicio, llamar en horario, autogestion por midirectv</label><br>
         <input id="rvo03" type="checkbox" name="rvo03" value="Quiero quiero renovar promociones en servicio basico, se deriva rvo "><label class="rvo" for="rvo03">Quiero quiero renovar promociones en servicio basico, se deriva rvo</label><br>
         <label for="" class="tituloCopy">Rvp</label><br>
-        <input id="rvp0" type="checkbox" name="rvp0" value="Quiero quiero renovar promociones en servicio premium, acepta ofertas retepremium 50% x 4 meses "><label class="rvo" for="rvp0">Quiero quiero renovar promociones en servicio premium, acepta ofertas retepremium 50% x 4 meses</label><br>
+        <input id="rvp0" type="checkbox" name="rvp0" value="Quiero quiero renovar promociones en servicio premium, acepta ofertas retepremium 50% x 4 meses" ><label class="rvo" for="rvp0" >Quiero quiero renovar promociones en servicio premium, acepta ofertas retepremium 50% x 4 meses</label><br>
         <input id="rvp01" type="checkbox" name="rvp01" value="Quiero la baja de la programacion premium, cancela fecha ip no acepta ofertas :-( "><label class="rvp" for="rvp01">Quiero la baja de la programacion premium, cancela fecha ip no acepta ofertas :-(</label><br>
         <label for="" class="tituloCopy">Factura</label><br>
         <input id="fac" type="checkbox" name="fac" value="Porque me llego tan alta la boleta, se explica boleta "><label class="rvp" for="fac">Porque me llego tan alta la boleta, se explica boleta</label><br>
         <input id="fac1" type="checkbox" name="fac1" value="Porque me descuentan otra vez de la tc, se confirma cancelacion de la tc, se factura mes anticipado "><label class="rvp" for="fac1">Porque me descuentan otra vez de la tc, se confirma cancelacion de la tc, se factura mes anticipado </label><br>
+        <input id="fac2" type="checkbox" name="fac2" value="No me llega la boleta, se actualiza email, se registra factura electronica "><label class="rvp" for="fac2">No me llega la boleta, se actualiza email, se registra factura electronica </label><br>
+        <input id="fac3" type="checkbox" name="fac3" value="Cancela debito automatico "><label class="rvp" for="fac3">Cancela debito automatico </label><br>
        </div>
       <div class="c8">
         <label for="" class="tituloCopy">Programacion</label><br>
         <input id="pro" type="checkbox" name="pro" value="Quiero activar el canal Tnt, acepta proporcional mas el mes completo en siguiente factura "><label class="rvo" for="pro">Quiero activar el canal Tnt, acepta proporcional mas el mes completo en siguiente factura</label><br>
         <input id="pro1" type="checkbox" name="pro1" value="Quiero activar el canal FoxSport, acepta proporcional mas el mes completo en siguiente factura "><label class="rvo" for="pro1">Quiero activar el canal FoxSport, acepta proporcional mas el mes completo en siguiente factura</label><br>
-        <input id="pro2" type="checkbox" name="pro2" value="Acepta programacion premium 1 mes free siguientes 2 meses al 50% "><label class="rvp" for="pro2">Acepta programacion premium 1 mes free siguientes 2 meses al 50%</label><br>
-        <input id="pro3" type="checkbox" name="pro3" value="Quiero un deco adicional, acepta 29990 por instalacion + 4100 deco adicional en proxima boleta "><label class="rvp" for="pro3">Quiero un deco adicional, acepta 29990 por instalacion + 4100 deco adicional en proxima boleta</label><br>
-        <input id="pro4" type="checkbox" name="pro4" value="Acepta full service primero 2 meses 50%, siguientes meses 100% "><label class="rvp" for="pro4">Acepta full service primero 2 meses 50%, siguientes meses 100%</label><br>
+        <input id="pro2" type="checkbox" name="pro2" value="Acepta programacion premium 1 mes free siguientes 2 meses al 50% "><label class="rvp" for="pro2">Acepta programacion premium 1 mes free siguientes 2 meses al 50%</label>
+        <input id="pro3" type="checkbox" name="pro3" value="Hbo "><label class="rvp" for="pro3">Hbo</label>
+        <input id="pro4" type="checkbox" name="pro4" value="Universal "><label class="rvp" for="pro4">Universal</label>
+        <input id="pro5" type="checkbox" name="pro5" value="Hot Pack "><label class="rvp" for="pro5">Hot Pack</label><br>
+        <input id="pro6" type="checkbox" name="pro6" value="Quiero un deco adicional, acepta 29990 por instalacion + 4100 deco adicional en proxima boleta "><label class="rvp" for="pro6">Quiero un deco adicional, acepta 29990 por instalacion + 4100 deco adicional en proxima boleta</label><br>
+        <input id="pro7" type="checkbox" name="pro7" value="Acepta full service primero 2 meses 50%, siguientes meses 100% "><label class="rvp" for="pro7">Acepta full service primero 2 meses 50%, siguientes meses 100%</label><br>
         <label for="" class="tituloCopy">Tst</label><br>
         <input id="tst" type="checkbox" name="tst" value="Quiero realizar la mudanza de mi servicio, se genera orden para mudar el servicio "><label class="rvp" for="tst">Quiero realizar la mudanza de mi servicio, se genera orden para mudar el servicio</label><br>
         <input id="tst1" type="checkbox" name="tst1" value="Tengo un deco que no enciende, se realizan pruebas, se genera wo :-( "><label class="rvo" for="tst1">Tengo un deco que no enciende, se realizan pruebas, se genera wo :-(</label><br>
