promocion combo cliente legacy

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-4150"><label class="rvpEspacio" for="rvp4">50%</label> <br>
         <input id="universal" type="checkbox" name="premium6" value="8300"><label for="universal">Universal----------></label> 
         <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-4150"><label class="rvpEspacio" for="rvp5">50%</label> <br>
-        <input id="combo2" type="checkbox" name="premium8" value="10500"><label for="combo2">Combo $10.500</label> <br>
+        <input id="combo2" type="checkbox" name="premium8" value="10500"><label for="combo2">Combo $10.500</label>
+        <input class="cheEspacio" id="rvp10" type="checkbox" name="rvp10" value="-2580"><label class="rvpEspacio" for="rvp10">Dcto $2580</label><br>
         <input id="star+" type="checkbox" name="premium9" value="8500"><label for="star+">Star+ $8.500</label> <br>
         <input id="disney" type="checkbox" name="premium10" value="6500"><label for="disney">Disney $6.500</label> <br>
         <input id="foxsport" type="checkbox" name="premium11" value="10450"><label for="foxsport">Fox Sport----------></label>
@@ -107,6 +108,8 @@
       <br>
       <br>
       <label class="flotante" id="resultado"></Label><br>
+      <!-- <label class="resultado2" ></Label><br> -->
+      
       <button class="flotanteButton">Borrar</button>
       <br>
       <br>
