--- a/index.html
+++ b/index.html
@@ -147,17 +147,24 @@
         <input id="fac1" type="checkbox" name="fac1" value="Porque me descuentan otra vez de la tc, se confirma cancelacion de la tc, se factura mes anticipado. "><label class="rvp" for="fac1">Porque me descuentan otra vez de la tc, se confirma cancelacion de la tc, se factura mes anticipado </label><br>
         <input id="fac2" type="checkbox" name="fac2" value="No me llega la boleta, se actualiza email, se registra factura electronica. "><label class="rvp" for="fac2">No me llega la boleta, se actualiza email, se registra factura electronica </label><br>
         <input id="fac3" type="checkbox" name="fac3" value="Cancela debito automatico. "><label class="rvp" for="fac3">Cancela debito automatico </label><br>
-       </div>
+       
+       <label for="" class="tituloCopy">Cobranzas</label><br>
+        <input id="cob" type="checkbox" name="cob" value="Quiero avisar que pagare la boleta y me borren el mensaje en pantalla. "><label class="rvp" for="cob">Quiero avisar que pagare la boleta y me borren el mensaje en pantalla</label><br>
+        <input id="cob1" type="checkbox" name="cob1" value="Quiero saber si me pueden aplicar una rebaja en la deuda para pagar la boleta, se deriva a cobranzas. "><label class="rvp" for="cob1">Quiero saber si me pueden aplicar una rebaja en la deuda para pagar la boleta, se deriva a cobranzas</label><br>
+        <p>
+          <a href="https://directv.workplace.com/work/landing/input/" class="enlace" target="_blank">WorkPlace </a><a href="https://psmfsa-oci.dtvpan.com/PSM/NUI/#/login" class="enlace" target="_blank">Icx </a><a href="http://clsatvisorf5prd-oci.dtvpan.com/AW025_NewVisor/" class="enlace" target="_blank">Visor </a><a href="https://dtvweb-cl.dtvpan.com/" class="enlace" target="_blank">Sds </a><a href="https://wfo15.dtvpan.com/wfo/control/signin" class="enlace" target="_blank">Verint </a><a href="https://egky.fa.us6.oraclecloud.com/" class="enlace" target="_blank">Integra </a>
+       </p>
+      </div>
       <div class="c8">
         <label for="" class="tituloCopy">Programacion</label><br>
         <input id="pro" type="checkbox" name="pro" value="Quiero activar el canal Tnt, acepta proporcional mas el mes completo en siguiente factura. "><label class="rvo" for="pro">Quiero activar el canal Tnt, acepta proporcional mas el mes completo en siguiente factura</label><br>
         <input id="pro1" type="checkbox" name="pro1" value="Quiero activar el canal FoxSport, acepta proporcional mas el mes completo en siguiente factura. "><label class="rvo" for="pro1">Quiero activar el canal FoxSport, acepta proporcional mas el mes completo en siguiente factura</label><br>
-        <input id="pro2" type="checkbox" name="pro2" value="Acepta programacion premium free julio siguientes 2 meses al 50%, activa:"><label class="rvp" for="pro2">Acepta programacion premium free julio siguientes 2 meses al 50%, activa:</label>
+        <input id="pro2" type="checkbox" name="pro2" value="Acepta programacion premium free julio siguientes 2 meses al 50%, activa: "><label class="rvp" for="pro2">Acepta programacion premium free julio siguientes 2 meses al 50%, activa:</label>
         <input id="pro3" type="checkbox" name="pro3" value="Hbo "><label class="rvp" for="pro3">Hbo</label>
         <input id="pro4" type="checkbox" name="pro4" value="Universal "><label class="rvp" for="pro4">Universal</label>
         <input id="pro5" type="checkbox" name="pro5" value="Hot Pack "><label class="rvp" for="pro5">Hot Pack</label><br>
         <input id="pro6" type="checkbox" name="pro6" value="Quiero un deco adicional, acepta 29990 por instalacion + 4100 deco adicional en proxima boleta. "><label class="rvp" for="pro6">Quiero un deco adicional, acepta 29990 por instalacion + 4100 deco adicional en proxima boleta</label><br>
-        <input id="pro7" type="checkbox" name="pro7" value="Acepta full service primero 2 meses 50%, siguientes meses 100%. "><label class="rvp" for="pro7">Acepta full service primero 2 meses 50%, siguientes meses 100%</label><br>
+        <input id="pro7" type="checkbox" name="pro7" value="Acepta full service primero 2 meses $805, siguientes meses $1610. "><label class="rvp" for="pro7">Acepta full service primero 2 meses $805, siguientes meses $1610</label><br>
         <input id="pro8" type="checkbox" name="pro8" value="Quiero comprar PPV, se activa PPV por $2990. "><label class="rvp" for="pro8">Quiero comprar PPV, se activa PPV por $2990</label><br>
         <label for="" class="tituloCopy">Tst</label><br>
         <input id="tst" type="checkbox" name="tst" value="Quiero realizar la mudanza de mi servicio, se genera orden para mudar el servicio. "><label class="rvp" for="tst">Quiero realizar la mudanza de mi servicio, se genera orden para mudar el servicio</label><br>
@@ -172,7 +179,9 @@
         <input id="tst9" type="checkbox" name="tst9" value="Se confirma cobro en proxima boleta de $15.990. "><label class="rvo" for="tst9">Se confirma cobro en proxima boleta de $15.990</label><br>
         <input id="tst10" type="checkbox" name="tst10" value="Quiero un recableado, se genera orden. "><label class="rvo" for="tst10">Quiero un recableado, se genera orden.</label>
         <input id="tst11" type="checkbox" name="tst11" value="Se confirma cobro en proxima boleta de $13.990. "><label class="rvo" for="tst11">Se confirma cobro en proxima boleta de $13.990</label><br>
-      
+        <label for="" class="tituloCopy">Extra</label><br>
+        <input id="ext" type="checkbox" name="ext" value="Me aparece un mensaje en pantalla de aviso de corte y ya pague la boleta, se retira osd. "><label class="rvp" for="ext">Me aparece un mensaje en pantalla de aviso de corte y ya pague la boleta, se retira osd</label><br>
+        <input id="ext1" type="checkbox" name="ext1" value="Me aparece en el televisor señales debiles o inexistentes, se configura conexion sintonia. "><label class="rvp" for="ext1">Me aparece en el televisor señales debiles o inexistentes, se configura conexion sintonia</label><br>
       </div>
     </form>
     <br>
