--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         <input id="cob1" type="checkbox" name="cob1" value="Quiero saber si me pueden aplicar una rebaja en la deuda para pagar la boleta, se deriva a cobranzas. "><label class="rvp" for="cob1">Quiero saber si me pueden aplicar una rebaja en la deuda para pagar la boleta, se deriva a cobranzas</label><br>
         <p>
           <a href="https://directv.workplace.com/work/landing/input/" class="enlace" target="_blank">WorkPlace </a><a href="https://psmfsa-oci.dtvpan.com/PSM/NUI/#/login" class="enlace" target="_blank">Icx </a><a href="http://clsatvisorf5prd-oci.dtvpan.com/AW025_NewVisor/" class="enlace" target="_blank">Visor </a><a href="https://dtvweb-cl.dtvpan.com/" class="enlace" target="_blank">Sds </a><a href="https://wfo15.dtvpan.com/wfo/control/signin" class="enlace" target="_blank">Verint </a><a href="https://egky.fa.us6.oraclecloud.com/" class="enlace" target="_blank">Integra </a>
+          <a href="https://www.directv.cl" class="enlace" target="_blank">Directv </a>
        </p>
       </div>
       <div class="c8">
