se agrega aumento de precios

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <input id="rvo03" type="checkbox" name="rvo03" value="Quiero quiero renovar promociones en servicio basico, se deriva rvo. "><label class="rvo" for="rvo03">Quiero quiero renovar promociones en servicio basico, se deriva rvo</label><br>
         <input id="rvo04" type="checkbox" name="rvo04" value="Quiero quiero promociones o la baja del servicio, se deriva rvo. "><label class="rvo" for="rvo04">Quiero quiero promociones o la baja del servicio, se deriva rvo</label><br>
         <label for="" class="tituloCopy">Rvp</label><br>
-        <input id="rvp0" type="checkbox" name="rvp0" value="Quiero la baja de la programacion premium, cancela fecha ip no acepta ofertas :-( "><label class="rvp" for="rvp0">Quiero la baja de la programacion premium, acepta ofertas de retencion</label><br>
+        <input id="rvp0" type="checkbox" name="rvp0" value="Quiero la baja de la programacion premium, acepta ofertas de retencion "><label class="rvp" for="rvp0">Quiero la baja de la programacion premium, acepta ofertas de retencion</label><br>
         <input id="rvp01" type="checkbox" name="rvp01" value="Quiero la baja de la programacion premium, cancela fecha ip no acepta ofertas :-( , cancela: "><label class="rvp" for="rvp01">Quiero la baja de la programacion premium, cancela fecha ip no acepta ofertas :-(, cancela:</label>
         <input id="rvp02" type="checkbox" name="rvp02" value="Hbo "><label class="rvp" for="rvp02">Hbo</label>
         <input id="rvp03" type="checkbox" name="rvp03" value="Universal "><label class="rvp" for="rvp03">Universal</label>
@@ -143,10 +143,13 @@
         <input id="rvp06" type="checkbox" name="rvp06" value="HotPAck "><label class="rvp" for="rvp06">HotPack</label><br>
         <input id="rvp07" type="checkbox" name="rvp07" value="Quiero quiero renovar promociones, acepta ofertas retepremium 50% x 4 meses." ><label class="rvo" for="rvp07" >Quiero quiero renovar promociones, acepta ofertas retepremium 50% x 4 meses</label><br>
         <label for="" class="tituloCopy">Factura</label><br>
-        <input id="fac" type="checkbox" name="fac" value="Porque me llego tan alta la boleta, se explica boleta. "><label class="rvp" for="fac">Porque me llego tan alta la boleta, se explica boleta</label><br>
-        <input id="fac1" type="checkbox" name="fac1" value="Porque me descuentan otra vez de la tc, se confirma cancelacion de la tc, se factura mes anticipado. "><label class="rvp" for="fac1">Porque me descuentan otra vez de la tc, se confirma cancelacion de la tc, se factura mes anticipado </label><br>
-        <input id="fac2" type="checkbox" name="fac2" value="No me llega la boleta, se actualiza email, se registra factura electronica. "><label class="rvp" for="fac2">No me llega la boleta, se actualiza email, se registra factura electronica </label><br>
-        <input id="fac3" type="checkbox" name="fac3" value="Cancela debito automatico. "><label class="rvp" for="fac3">Cancela debito automatico </label><br>
+        <input id="fac" type="checkbox" name="fac" value="Porque incremento el precio de la boleta, se informa aumento de precios. "><label class="rvp" for="fac">Porque incremento el precio de la boleta, se informa aumento de precios</label>
+        <input id="fac1" type="checkbox" name="fac1" value="Acepta $2000. "><label class="rvp" for="fac1">Acepta $2000</label>
+        <input id="fac2" type="checkbox" name="fac2" value="Se reclama x back office. "><label class="rvp" for="fac2">Se reclama x back office</label>
+        <input id="fac3" type="checkbox" name="fac3" value="Solicita baja, se deriva rvo. "><label class="rvp" for="fac3">Solicita baja, se deriva rvo</label><br>        
+        <input id="fac4" type="checkbox" name="fac4" value="Porque me descuentan otra vez de la tc, se confirma cancelacion de la tc, se factura mes anticipado. "><label class="rvp" for="fac4">Porque me descuentan otra vez de la tc, se confirma cancelacion de la tc, se factura mes anticipado </label><br>
+        <input id="fac5" type="checkbox" name="fac5" value="No me llega la boleta, se actualiza email, se registra factura electronica. "><label class="rvp" for="fac5">No me llega la boleta, se actualiza email, se registra factura electronica </label><br>
+        <input id="fac6" type="checkbox" name="fac6" value="Cancela debito automatico. "><label class="rvp" for="fac6">Cancela debito automatico </label><br>
        
        <label for="" class="tituloCopy">Cobranzas</label><br>
         <input id="cob" type="checkbox" name="cob" value="Quiero avisar que pagare la boleta y me borren el mensaje en pantalla. "><label class="rvp" for="cob">Quiero avisar que pagare la boleta y me borren el mensaje en pantalla</label><br>
