--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <h4 class="nuevos">Clientes Nuevos</h4>
     <hr class="nuevos">
     
-    <input id="pplatahd" type="radio" name="plan" value="28940"><label for="pplatahd">Plan Plata HD</label> <br>
-    <input id="porohd" type="radio" name="plan" value="34050"><label for="porohd">Plan Oro HD</label> <br>
+    <input id="pplatahd" type="radio" name="plan" value="28940" accesskey="p"><label for="pplatahd">Plan Plata HD</label> <br>
+    <input id="porohd" type="radio" name="plan" value="34050" accesskey="o"><label for="porohd">Plan Oro HD</label> <br>
     <input id="poroplus" type="radio" name="plan" value="38820"><label for="poroplus">Plan Oro Plus HD</label> <br>
     <input id="oro4k" type="radio" name="plan" value="43260"><label for="oro4k">Plan Oro 4K</label> <br>
     <input id="broncelite" type="radio" name="plan" value="20610"><label for="broncelite">Plan Bronce Lite</label>
@@ -33,7 +33,7 @@
     <h4 class="cartera">Clientes Cartera</h4>
     <hr class="cartera">
     <input id="bronce" type="radio" name="plan" value="26170"><label for="bronce">Pack Bronce</label> <br>
-    <input id="broncehd" type="radio" name="plan" value="28590"><label for="broncehd">Pack Bronce HD</label> <br>
+    <input id="broncehd" type="radio" name="plan" value="28940"><label for="broncehd">Pack Bronce HD</label> <br>
     <input id="plata" type="radio" name="plan" value="34470"><label for="plata">Pack Plata</label> <br>
     <input id="platahd" type="radio" name="plan" value="37240"><label for="platahd">Pack Plata HD</label> <br> 
     <input id="orosd" type="radio" name="plan" value="39580"><label for="orosd">Pack Oro</label> <br>
@@ -45,7 +45,7 @@
     <div class="c3">
       <h4 class="decos">Total de decos</h4>
       <hr class="decos">
-      <input id="3" type="radio" name="equipos" value="4100"><label for="3">3 decos</label><br>
+      <input id="3" type="radio" name="equipos" value="4100" accesskey="o"><label for="3">3 decos</label><br>
       <input id="4" type="radio" name="equipos" value="8200"><label for="4">4 decos</label><br>
       <input id="5" type="radio" name="equipos" value="12300"><label for="5">5 decos</label><br>
       <input id="6" type="radio" name="equipos" value="16400"><label for="6">6 decos</label><br>
@@ -81,7 +81,7 @@
     <div class="c5">
     <h4 class="rvo">Promociones Rvo</h4>
     <hr class="rvo">
-    <input id="rvo1" type="radio" name="rvo" value="-2000"><label for="rvo1">$2.000</label><br>
+    <input id="rvo1" type="radio" name="rvo" value="-2000" accesskey="r"><label for="rvo1">$2.000</label><br>
     <input id="rvo2" type="radio" name="rvo" value="-4000"><label for="rvo2">$4.000</label><br>
     <input id="rvo3" type="radio" name="rvo" value="-5000"><label for="rvo3">$5.000</label><br>
     <input id="rvo4" type="radio" name="rvo" value="-6000"><label for="rvo4">$6.000</label><br>
@@ -110,7 +110,7 @@
       <label class="flotante" id="resultado" name="resultado"></Label><br>
       <!-- <label class="resultado2" ></Label><br> -->
       
-      <button class="flotanteButton">Borrar</button>
+      <button class="flotanteButton" >Borrar</button>
       <br>
       <br>
       <br>
