--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <div class="c3">
       <h4 class="decos">Total de decos</h4>
       <hr class="decos">
-      <input id="3" type="radio" name="equipos" value="4100" accesskey="o"><label for="3">3 decos</label><br>
+      <input id="2" type="radio" name="equipos" value="0" ><label for="2">2 decos</label><br>
+      <input id="3" type="radio" name="equipos" value="4100" ><label for="3">3 decos</label><br>
       <input id="4" type="radio" name="equipos" value="8200"><label for="4">4 decos</label><br>
       <input id="5" type="radio" name="equipos" value="12300"><label for="5">5 decos</label><br>
       <input id="6" type="radio" name="equipos" value="16400"><label for="6">6 decos</label><br>
@@ -81,20 +82,21 @@
     <div class="c5">
     <h4 class="rvo">Promociones Rvo</h4>
     <hr class="rvo">
-    <input id="rvo1" type="radio" name="rvo" value="-2000" accesskey="r"><label for="rvo1">$2.000</label><br>
-    <input id="rvo2" type="radio" name="rvo" value="-4000"><label for="rvo2">$4.000</label><br>
-    <input id="rvo3" type="radio" name="rvo" value="-5000"><label for="rvo3">$5.000</label><br>
-    <input id="rvo4" type="radio" name="rvo" value="-6000"><label for="rvo4">$6.000</label><br>
-    <input id="rvo5" type="radio" name="rvo" value="-7000"><label for="rvo5">$7.000</label><br>
-    <input id="rvo6" type="radio" name="rvo" value="-8000"><label for="rvo6">$8.000</label><br>
-    <input id="rvo7" type="radio" name="rvo" value="-9000"><label for="rvo7">$9.000</label><br>
-    <input id="rvo8" type="radio" name="rvo" value="-10000"><label for="rvo8">$10.000</label><br>
-    <input id="rvo9" type="radio" name="rvo" value="-11000"><label for="rvo9">$11.000</label><br>
-    <input id="rvo10" type="radio" name="rvo" value="-12000"><label for="rvo10">$12.000</label><br>
-    <input id="rvo11" type="radio" name="rvo" value="-14000"><label for="rvo11">$14.000</label><br>
-    <input id="rvo12" type="radio" name="rvo" value="-16000"><label for="rvo12">$16.000</label><br>
-    <input id="rvo13" type="checkbox" name="rvoEquipo" value="-2050"><label for="rvo13">50% deco Adicional</label><br>
-    <input id="rvo14" type="text" name="rvoExtra" value="" class="Extra"><label for="rvo14">Ingresa un descuento</label>
+    <input id="rvo1" type="radio" name="rvo" value="0"><label for="rvo1">$0</label><br>
+    <input id="rvo2" type="radio" name="rvo" value="-2000"><label for="rvo2">$2.000</label><br>
+    <input id="rvo3" type="radio" name="rvo" value="-4000"><label for="rvo3">$4.000</label><br>
+    <input id="rvo4" type="radio" name="rvo" value="-5000"><label for="rvo4">$5.000</label><br>
+    <input id="rvo5" type="radio" name="rvo" value="-6000"><label for="rvo5">$6.000</label><br>
+    <input id="rvo6" type="radio" name="rvo" value="-7000"><label for="rvo6">$7.000</label><br>
+    <input id="rvo7" type="radio" name="rvo" value="-8000"><label for="rvo7">$8.000</label><br>
+    <input id="rvo8" type="radio" name="rvo" value="-9000"><label for="rvo8">$9.000</label><br>
+    <input id="rvo9" type="radio" name="rvo" value="-10000"><label for="rvo9">$10.000</label><br>
+    <input id="rvo10" type="radio" name="rvo" value="-11000"><label for="rvo10">$11.000</label><br>
+    <input id="rvo11" type="radio" name="rvo" value="-12000"><label for="rvo11">$12.000</label><br>
+    <input id="rvo12" type="radio" name="rvo" value="-14000"><label for="rvo12">$14.000</label><br>
+    <input id="rvo13" type="radio" name="rvo" value="-16000"><label for="rvo13">$16.000</label><br>
+    <input id="rvo14" type="checkbox" name="rvoEquipo" value="-2050"><label for="rvo14">50% deco Adicional</label><br>
+    <input id="rvo15" type="text" name="rvoExtra" value="" class="Extra"><label for="rvo15">Ingresa un descuento</label>
     </div>
     <div class="c6">
       <h4 class="extras">Extras</h4>
