--- a/index.html
+++ b/index.html
@@ -159,19 +159,21 @@
         <p>
           <a href="https://directv.workplace.com/work/landing/input/" class="enlace" target="_blank">WorkPlace </a><a href="https://psmfsa-oci.dtvpan.com/PSM/NUI/#/login" class="enlace" target="_blank">Icx </a><a href="http://clsatvisorf5prd-oci.dtvpan.com/AW025_NewVisor/" class="enlace" target="_blank">Visor </a><a href="https://dtvweb-cl.dtvpan.com/" class="enlace" target="_blank">Sds </a><a href="https://wfo15.dtvpan.com/wfo/control/signin" class="enlace" target="_blank">Verint </a><a href="https://egky.fa.us6.oraclecloud.com/" class="enlace" target="_blank">Integra </a>
           <a href="https://www.directv.cl" class="enlace" target="_blank">Directv </a>
+         
        </p>
       </div>
       <div class="c8">
         <label for="" class="tituloCopy">Programacion</label><br>
         <input id="pro" type="checkbox" name="pro" value="Quiero activar el canal Tnt, acepta proporcional mas el mes completo en siguiente factura. "><label class="rvo" for="pro">Quiero activar el canal Tnt, acepta proporcional mas el mes completo en siguiente factura</label><br>
         <input id="pro1" type="checkbox" name="pro1" value="Quiero activar el canal FoxSport, acepta proporcional mas el mes completo en siguiente factura. "><label class="rvo" for="pro1">Quiero activar el canal FoxSport, acepta proporcional mas el mes completo en siguiente factura</label><br>
-        <input id="pro2" type="checkbox" name="pro2" value="Acepta programacion premium free julio siguientes 2 meses al 50%, activa: "><label class="rvp" for="pro2">Acepta programacion premium free julio siguientes 2 meses al 50%, activa:</label>
-        <input id="pro3" type="checkbox" name="pro3" value="Hbo "><label class="rvp" for="pro3">Hbo</label>
-        <input id="pro4" type="checkbox" name="pro4" value="Universal "><label class="rvp" for="pro4">Universal</label>
-        <input id="pro5" type="checkbox" name="pro5" value="Hot Pack "><label class="rvp" for="pro5">Hot Pack</label><br>
-        <input id="pro6" type="checkbox" name="pro6" value="Quiero un deco adicional, acepta 29990 por instalacion + 4100 deco adicional en proxima boleta. "><label class="rvp" for="pro6">Quiero un deco adicional, acepta 29990 por instalacion + 4100 deco adicional en proxima boleta</label><br>
-        <input id="pro7" type="checkbox" name="pro7" value="Acepta full service primero 2 meses $805, siguientes meses $1610. "><label class="rvp" for="pro7">Acepta full service primero 2 meses $805, siguientes meses $1610</label><br>
-        <input id="pro8" type="checkbox" name="pro8" value="Quiero comprar PPV, se activa PPV por $2990. "><label class="rvp" for="pro8">Quiero comprar PPV, se activa PPV por $2990</label><br>
+        <input id="pro2" type="checkbox" name="pro2" value="Acepta cambio de plan plata a oro con oferta por 3 meses pagando plan plata"><label class="rvp" for="pro2">Acepta cambio de plan plata a oro con oferta por 3 meses pagando plan plata</label><br>
+        <input id="pro3" type="checkbox" name="pro3" value="Acepta programacion premium free agosto siguientes 2 meses al 50%, activa: "><label class="rvp" for="pro3">Acepta programacion premium free julio siguientes 2 meses al 50%, activa:</label>
+        <input id="pro4" type="checkbox" name="pro4" value="Hbo "><label class="rvp" for="pro4">Hbo</label>
+        <input id="pro5" type="checkbox" name="pro5" value="Universal "><label class="rvp" for="pro5">Universal</label>
+        <input id="pro6" type="checkbox" name="pro6" value="Hot Pack "><label class="rvp" for="pro6">Hot Pack</label><br>
+        <input id="pro7" type="checkbox" name="pro7" value="Quiero un deco adicional, acepta 29990 por instalacion + 4100 deco adicional en proxima boleta. "><label class="rvp" for="pro7">Quiero un deco adicional, acepta 29990 por instalacion + 4100 deco adicional en proxima boleta</label><br>
+        <input id="pro8" type="checkbox" name="pro8" value="Acepta full service primero 2 meses $805, siguientes meses $1610. "><label class="rvp" for="pro8">Acepta full service primero 2 meses $805, siguientes meses $1610</label><br>
+        <input id="pro9" type="checkbox" name="pro9" value="Quiero comprar PPV, se activa PPV por $2990. "><label class="rvp" for="pro9">Quiero comprar PPV, se activa PPV por $2990</label><br>
         <label for="" class="tituloCopy">Tst</label><br>
         <input id="tst" type="checkbox" name="tst" value="Quiero realizar la mudanza de mi servicio, se genera orden para mudar el servicio. "><label class="rvp" for="tst">Quiero realizar la mudanza de mi servicio, se genera orden para mudar el servicio</label><br>
         <input id="tst1" type="checkbox" name="tst1" value="Tengo un deco que no enciende, se realizan pruebas, se genera wo :-( "><label class="rvo" for="tst1">Tengo un deco que no enciende, se realizan pruebas, se genera wo :-(</label><br>
