--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <input id="pro" type="checkbox" name="pro" value="Quiero activar el canal Tnt, acepta proporcional mas el mes completo en siguiente factura. "><label class="rvo" for="pro">Quiero activar el canal Tnt, acepta proporcional mas el mes completo en siguiente factura</label><br>
         <input id="pro1" type="checkbox" name="pro1" value="Quiero activar el canal FoxSport, acepta proporcional mas el mes completo en siguiente factura. "><label class="rvo" for="pro1">Quiero activar el canal FoxSport, acepta proporcional mas el mes completo en siguiente factura</label><br>
         <input id="pro2" type="checkbox" name="pro2" value="Acepta cambio de plan plata a oro con oferta por 3 meses pagando plan plata"><label class="rvp" for="pro2">Acepta cambio de plan plata a oro con oferta por 3 meses pagando plan plata</label><br>
-        <input id="pro3" type="checkbox" name="pro3" value="Acepta programacion premium free agosto siguientes 2 meses al 50%, activa: "><label class="rvp" for="pro3">Acepta programacion premium free julio siguientes 2 meses al 50%, activa:</label>
+        <input id="pro3" type="checkbox" name="pro3" value="Acepta programacion premium free agosto siguientes 2 meses al 50%, activa: "><label class="rvp" for="pro3">Acepta programacion premium free agosto siguientes 2 meses al 50%, activa:</label>
         <input id="pro4" type="checkbox" name="pro4" value="Hbo "><label class="rvp" for="pro4">Hbo</label>
         <input id="pro5" type="checkbox" name="pro5" value="Universal "><label class="rvp" for="pro5">Universal</label>
         <input id="pro6" type="checkbox" name="pro6" value="Hot Pack "><label class="rvp" for="pro6">Hot Pack</label><br>
