emailVPN plan bronce hd

--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
     <input id="porohd" type="radio" name="plan" value="34050" accesskey="o"><label for="porohd">Plan Oro HD</label> <br>
     <input id="poroplus" type="radio" name="plan" value="38820"><label for="poroplus">Plan Oro Plus HD</label> <br>
     <input id="oro4k" type="radio" name="plan" value="43260"><label for="oro4k">Plan Oro 4K</label> <br>
-    <input id="broncelite" type="radio" name="plan" value="20610"><label for="broncelite">Plan Bronce Lite</label>
+    <input id="broncelite" type="radio" name="plan" value="21610"><label for="broncelite">Plan Bronce Lite</label> <br>
+    <input id="broncehdn" type="radio" name="plan" value="19990"><label for="broncehdn">Plan Bronce HD</label>
     </div>  
     <div class="c2">
     <h4 class="cartera">Clientes Cartera</h4>
     <hr class="cartera">
     <input id="bronce" type="radio" name="plan" value="26170"><label for="bronce">Pack Bronce</label> <br>
     <input id="broncehd" type="radio" name="plan" value="28940"><label for="broncehd">Pack Bronce HD</label> <br>
-    <input id="plata" type="radio" name="plan" value="34470"><label for="plata">Pack Plata</label> <br>
+    <input id="plata" type="radio" name="plan" value="34470"><label for="plata" >Pack Plata</label> <br>
     <input id="platahd" type="radio" name="plan" value="37240"><label for="platahd">Pack Plata HD</label> <br> 
     <input id="orosd" type="radio" name="plan" value="39580"><label for="orosd">Pack Oro</label> <br>
     <input id="orohd" type="radio" name="plan" value="42350"><label for="orohd">Pack Oro HD</label> <br>
@@ -159,7 +160,8 @@
         <p>
           <a href="https://directv.workplace.com/work/landing/input/" class="enlace" target="_blank">WorkPlace </a><a href="https://psmfsa-oci.dtvpan.com/PSM/NUI/#/login" class="enlace" target="_blank">Icx </a><a href="http://clsatvisorf5prd-oci.dtvpan.com/AW025_NewVisor/" class="enlace" target="_blank">Visor </a><a href="https://dtvweb-cl.dtvpan.com/" class="enlace" target="_blank">Sds </a><a href="https://wfo15.dtvpan.com/wfo/control/signin" class="enlace" target="_blank">Verint </a><a href="https://egky.fa.us6.oraclecloud.com/" class="enlace" target="_blank">Integra </a>
           <a href="https://www.directv.cl" class="enlace" target="_blank">Directv </a>
-          <a href="hcAgosto.ods" class="enlace"  download="HcAgosto.ods">hcAgosto</a>  
+          <a href="hcAgosto.ods" class="enlace"  download="HcAgosto.ods">hcAgosto</a> 
+          <a href="https://outlook.office.com/mail/" class="enlace" target="_blank">Email VPN </a> 
           
          
        </p>
