bajas del servicio

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image:height" content="500">
     <meta property="og:image" content="https://fcifuentes2.github.io/meta.jpg">
     <meta property="og:url" content="https://fcifuentes2.github.io">
-    <meta property="og:description" content="Calculadora que aguiliza tus consultas de facturacion" />
+    <meta property="og:description" content="Calculadora que agiliza tus consultas de facturacion" />
     <!-- <meta property="og:type" content="article" /> -->
     
  </head>
@@ -132,10 +132,14 @@
       </p>
         <label for="" class="tituloCopy">Rvo</label><br>
         <input id="rvo0" type="checkbox" name="rvo0" value="Quiero la baja del servicio por costos, se deriva a rvo. "><label class="rvo" for="rvo0">Quiero la baja del servicio por costos, se deriva a rvo</label><br>
-        <input id="rvo01" type="checkbox" name="rvo01" value="Quiero la baja del servicio por , se deriva rvo. "><label class="rvo" for="rvo01">Quiero la baja del servicio por , se deriva a rvo</label><br>
-        <input id="rvo02" type="checkbox" name="rvo02" value="Quiero la baja del servicio, llamar en horario, se informa autogestion por midirectv. "><label class="rvo" for="rvo02">Quiero la baja del servicio, llamar en horario, autogestion por midirectv</label><br>
-        <input id="rvo03" type="checkbox" name="rvo03" value="Quiero renovar promociones en servicio basico, se deriva rvo. "><label class="rvo" for="rvo03">Quiero renovar promociones en servicio basico, se deriva rvo</label><br>
-        <input id="rvo04" type="checkbox" name="rvo04" value="Quiero promociones o la baja del servicio, se deriva rvo. "><label class="rvo" for="rvo04">Quiero promociones o la baja del servicio, se deriva rvo</label><br>
+        <input id="rvo01" type="checkbox" name="rvo01" value="Quiero la baja del servicio por "><label class="rvo" for="rvo01">Quiero la baja del servicio por </label>
+        <input id="rvo02" type="checkbox" name="rvo02" value="mudanza, se deriva rvo "><label class="rvo" for="rvo02">mudanza </label>
+        <input id="rvo03" type="checkbox" name="rvo03" value="costos de la competencia, se deriva rvo "><label class="rvo" for="rvo03">costos de la competencia</label>
+        <input id="rvo04" type="checkbox" name="rvo04" value="desempleo , se deriva rvo. "><label class="rvo" for="rvo04">desempleo </label>
+        <input id="rvo05" type="checkbox" name="rvo05" value="situacion economica , se deriva rvo. "><label class="rvo" for="rvo05">situacion economica </label> <br>
+        <input id="rvo06" type="checkbox" name="rvo06" value="Quiero la baja del servicio, llama fuera de horario, se informa autogestion por midirectv o llamar en dia habil. "><label class="rvo" for="rvo06">Quiero la baja del servicio, llama fuera de horario, se informa autogestion por midirectv.</label><br>
+        <input id="rvo07" type="checkbox" name="rvo07" value="Quiero renovar promociones en servicio basico, se deriva rvo. "><label class="rvo" for="rvo07">Quiero renovar promociones en servicio basico, se deriva rvo</label><br>
+        <input id="rvo08" type="checkbox" name="rvo08" value="Quiero promociones o la baja del servicio, se deriva rvo. "><label class="rvo" for="rvo08">Quiero promociones o la baja del servicio, se deriva rvo</label><br>
         <label for="" class="tituloCopy">Rvp</label><br>
         <input id="rvp0" type="checkbox" name="rvp0" value="Quiero la baja de la programacion premium, acepta ofertas de retencion "><label class="rvp" for="rvp0">Quiero la baja de la programacion premium, acepta ofertas de retencion</label><br>
         <input id="rvp01" type="checkbox" name="rvp01" value="Quiero la baja de la programacion premium, cancela fecha ip no acepta ofertas :-( , cancela: "><label class="rvp" for="rvp01">Quiero la baja de la programacion premium, cancela fecha ip no acepta ofertas :-(, cancela:</label>
@@ -146,6 +150,7 @@
         <input id="rvp06" type="checkbox" name="rvp06" value="HotPAck "><label class="rvp" for="rvp06">HotPack</label><br>
         <input id="rvp07" type="checkbox" name="rvp07" value="Quiero quiero renovar promociones, acepta ofertas retepremium 50% x 4 meses." ><label class="rvo" for="rvp07" >Quiero quiero renovar promociones, acepta ofertas retepremium 50% x 4 meses</label><br>
         <label for="" class="tituloCopy">Factura</label><br>
+        <input id="fac" type="checkbox" name="fac" value="total a pagar "><label class="rvp" for="fac">Total a pagar</label>
         <input id="fac" type="checkbox" name="fac" value="Porque incremento el precio de la boleta, se informa aumento de precios. "><label class="rvp" for="fac">Porque incremento el precio de la boleta, se informa aumento de precios</label>
         <input id="fac1" type="checkbox" name="fac1" value="Acepta $2000. "><label class="rvp" for="fac1">Acepta $2000</label>
         <input id="fac2" type="checkbox" name="fac2" value="Se reclama x back office. "><label class="rvp" for="fac2">Se reclama x back office</label>
@@ -171,7 +176,7 @@
         <input id="pro" type="checkbox" name="pro" value="Quiero activar el canal Tnt, acepta proporcional mas el mes completo en siguiente factura. "><label class="rvo" for="pro">Quiero activar el canal Tnt, acepta proporcional mas el mes completo en siguiente factura</label><br>
         <input id="pro1" type="checkbox" name="pro1" value="Quiero activar el canal FoxSport, acepta proporcional mas el mes completo en siguiente factura. "><label class="rvo" for="pro1">Quiero activar el canal FoxSport, acepta proporcional mas el mes completo en siguiente factura</label><br>
         <input id="pro2" type="checkbox" name="pro2" value="Acepta cambio de plan plata a oro con oferta por 3 meses pagando plan plata"><label class="rvp" for="pro2">Acepta cambio de plan plata a oro con oferta por 3 meses pagando plan plata</label><br>
-        <input id="pro3" type="checkbox" name="pro3" value="Acepta programacion premium free agosto siguientes 2 meses al 50%, activa: "><label class="rvp" for="pro3">Acepta programacion premium free agosto siguientes 2 meses al 50%, activa:</label>
+        <input id="pro3" type="checkbox" name="pro3" value="Acepta programacion premium free septiembre siguientes 2 meses al 50%, activa: "><label class="rvp" for="pro3">Acepta programacion premium free septiembre siguientes 2 meses al 50%, activa:</label>
         <input id="pro4" type="checkbox" name="pro4" value="Hbo "><label class="rvp" for="pro4">Hbo</label>
         <input id="pro5" type="checkbox" name="pro5" value="Universal "><label class="rvp" for="pro5">Universal</label>
         <input id="pro6" type="checkbox" name="pro6" value="Hot Pack "><label class="rvp" for="pro6">Hot Pack</label><br>
