bajas del servicio

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <input id="rvp06" type="checkbox" name="rvp06" value="HotPAck "><label class="rvp" for="rvp06">HotPack</label><br>
         <input id="rvp07" type="checkbox" name="rvp07" value="Quiero quiero renovar promociones, acepta ofertas retepremium 50% x 4 meses." ><label class="rvo" for="rvp07" >Quiero quiero renovar promociones, acepta ofertas retepremium 50% x 4 meses</label><br>
         <label for="" class="tituloCopy">Factura</label><br>
-        <input id="fac" type="checkbox" name="fac" value="total a pagar "><label class="rvp" for="fac">Total a pagar</label>
+        <!-- <input id="fac" type="checkbox" name="fac" value="total a pagar "><label class="rvp" for="fac">Total a pagar</label> -->
         <input id="fac" type="checkbox" name="fac" value="Porque incremento el precio de la boleta, se informa aumento de precios. "><label class="rvp" for="fac">Porque incremento el precio de la boleta, se informa aumento de precios</label>
         <input id="fac1" type="checkbox" name="fac1" value="Acepta $2000. "><label class="rvp" for="fac1">Acepta $2000</label>
         <input id="fac2" type="checkbox" name="fac2" value="Se reclama x back office. "><label class="rvp" for="fac2">Se reclama x back office</label>
